--- a/style.css
+++ b/style.css
@@ -17,6 +17,16 @@ h1{
     margin: 0;
 }
 
+h2{
+    text-align: center;
+}
+
+p{
+    text-align: center;
+}
+
+
+
 #blog-posts{
     max-width: 400px;
     margin: 20px auto;
